--- a/assets/style.css
+++ b/assets/style.css
@@ -14,6 +14,25 @@ body {
   margin: 0 20px;
 }
 
+.thumbnails th,
+.thumbnails td {
+  padding: 10px;
+}
+
+.thumbnails img {
+  max-height: 150px;
+  max-width: 150px;
+  border: 1px solid white;
+}
+
+.zoomable {
+  border: 1px solid white;
+}
+.zoomable:hover {
+  transform: scale(2);
+  border: 1px solid black;
+}
+
 pre {
   font-size: 11px;
   font-family: Menlo, Monaco, Consolas;
