--- a/assets/style.css
+++ b/assets/style.css
@@ -94,3 +94,17 @@ summary {
   cursor: pointer;
   user-select: none;
 }
+
+td .editlink {
+  visibility: hidden;
+}
+
+td:hover .editlink {
+  visibility: visible;
+  text-decoration: none;
+  color: grey;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 20px;
+}
